youker-assistant (0.3.3-0ubuntu1) trusty; urgency=low

  * Access Yahoo weather info.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 16 Jan 2014 11:03:19 +0800

youker-assistant (0.3.2-0ubuntu1) trusty; urgency=low

  * Refersh process list automatically and position the originally selected process(LP: #1261802).
  * Adjust the structure of QML project.
  * Add CD-ROM, Audio Card and WLan information.
  * Kill root process.
  * Add Device driver basic information.
  * Use new translation content.
  * Display the preview picture when click the name on the BootAnimation page.
  * Rename dbus and add backends/youker-assistant-daemon/install.sh.
  * Use policykit for all place that requires authentication(LP: #1261799).
  * Add GnuPG keys of the UbuntuKylin archive: ubuntukylin-archive-keyring.gpg.
  * Replace some icons.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 10 Jan 2014 12:30:30 +0800

youker-assistant (0.3.1-0ubuntu1) trusty; urgency=low

  * Overide the Font Dialog with KFontDialog Class.
  * Add detailed information of Network Card, HardDisk and Graphics Card.
  * Add Separator.qml.
  * Change Logo and add InfoGroup.js.
  * Access weather data with python threading.
  * Change /usr/share/youker-assistant-daemon to /var/lib/youker-assistant-daemon.
  * Change UbuntuKylin to Ubuntu Kylin.
  * Modify calculation method of system memory allocation(LP: #1242579).
  * Refresh net speed every second to resolve the wrong displaying net flow(LP: #1237891).
  * Modify LargestFile.qml and One Key cleaner.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 17 Dec 2013 15:12:07 +0800

youker-assistant (0.2.4-0ubuntu1) saucy; urgency=low

  * Optimize button events of AuthDialog(LP: #1256183).
  * Fixed Dialog's movement and hazing when click a button(LP: #1255550).
  * Change some pictures of computer's detailed information.
  * All system configuration saved with QSetting.
