@@ -1,0 +1,57 @@
+/*
+ * Copyright (C) 2013 National University of Defense Technology(NUDT) & Kylin Ltd.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; version 3.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+#include "logindialog.h"
+#include "ui_logindialog.h"
+#include <QDebug>
+#include <QMessageBox>
+
+LoginDialog::LoginDialog(QWidget *parent) :
+    QDialog(parent),
+    ui(new Ui::LoginDialog)
+{
+    ui->setupUi(this);
+    this->setAttribute(Qt::WA_DeleteOnClose);
+    this->setWindowFlags(Qt::FramelessWindowHint);
+    this->setAttribute(Qt::WA_TranslucentBackground);
+    ui->btn_close->installEventFilter(this);
+    ui->okButton->installEventFilter(this);
+    ui->closeButton->installEventFilter(this);
+    ui->btn_close->setStyleSheet("border-image:url(:/pixmap/image/closeBtn.png)");
+    ui->okButton->setStyleSheet("QPushButton {border-image:url(:/pixmap/image/ok.png);}"
+                "QPushButton:hover{border-image:url(:/pixmap/image/ok-hover.png);}");
+    ui->closeButton->setStyleSheet("QPushButton {border-image:url(:/pixmap/image/quit.png);}"
+                "QPushButton:hover{border-image:url(:/pixmap/image/quit-hover.png);}");
+    ui->pwdlineEdit->setEchoMode(QLineEdit::Password);
+    ui->userlineEdit->setFocus();
+}
+
+LoginDialog::~LoginDialog()
+{
+    delete ui;
+}
+
+void LoginDialog::on_closeButton_clicked()
+{
+    this->close();
+}
+
+void LoginDialog::on_okButton_clicked()
+{
+    QString user = ui->userlineEdit->text();
+    QString pwd = ui->pwdlineEdit->text();
+    emit translate_user_password(user, pwd);
+    this->accept();
+}
