@@ -1,0 +1,77 @@
+/*
+ * Copyright (C) 2013 National University of Defense Technology(NUDT) & Kylin Ltd.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; version 3.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+#include "logindialog.h"
+#include "ui_logindialog.h"
+#include <QMouseEvent>
+#include <QMessageBox>
+bool LoginDialog::eventFilter(QObject *obj, QEvent *event)
+{
+    if(obj == ui->btn_close){
+            if(event->type() == QEvent::Enter){
+                ui->btn_close->setPixmap(QPixmap(":/pixmap/image/closeBtn-hover.png"));
+            }else if(event->type() == QEvent::Leave){
+                ui->btn_close->setPixmap(QPixmap(":/pixmap/image/closeBtn.png"));
+            }else if(event->type() == QEvent::MouseButtonPress){
+                ui->btn_close->setPixmap(QPixmap(":/pixmap/image/closeBtn-hover.png"));
+            }else if(event->type() == QEvent::MouseButtonRelease){
+                QMouseEvent *me = (QMouseEvent *)event;
+                QLabel *lb = (QLabel *)obj;
+                if(me->x() > 0 && me->x() < lb->width() && me->y() > 0 && me->y() < lb->height()){
+                    this->close();
+                    this->destroy();
+                }else{
+                    ui->btn_close->setPixmap(QPixmap(":/pixmap/image/closeBtn.png"));
+                }
+            } else {
+                return QObject::eventFilter(obj, event);
+            }
+    }
+    if(obj == ui->okButton ||obj == ui->closeButton)
+    {
+        if(event->type() == QEvent::MouseButtonPress)
+        {
+            QMouseEvent *me = (QMouseEvent *)event;
+            dragPos = me->globalPos() - frameGeometry().topLeft();
+        }else if(event->type() == QEvent::MouseButtonRelease)
+        {
+            setWindowOpacity(1);
+        }
+    }
+    return QObject::eventFilter(obj, event);
+}
+
+void LoginDialog::mousePressEvent(QMouseEvent *event) {
+    if (event->button() == Qt::LeftButton) {
+        dragPos = event->globalPos() - frameGeometry().topLeft();
+        event->accept();
+    }
+}
+
+void LoginDialog::mouseMoveEvent(QMouseEvent *event) {
+    if (event->buttons() & Qt::LeftButton ) {
+        move(event->globalPos() - dragPos);
+        setWindowOpacity(1);//0.5
+    }
+    event->accept();
+
+}
+
+void LoginDialog::mouseReleaseEvent(QMouseEvent *event) {
+    if (event->button() == Qt::LeftButton) {
+        setWindowOpacity(1);
+    }
+    event->accept();
+}
