@@ -1,8 +1,9 @@
 youker-assistant (0.3.3-0ubuntu1) trusty; urgency=low
 
   * Access Yahoo weather info.
+  * Add Class LoginDialog and HttpAuth to login with Ubuntu Kylin forum account.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 16 Jan 2014 11:03:19 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 17 Jan 2014 15:46:28 +0800
 
 youker-assistant (0.3.2-0ubuntu1) trusty; urgency=low
 
